--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <title>Title page</title>  
 
-<link href="./css/style.css" rel="stylesheet"></head>
+<link href="/css/style.css" rel="stylesheet"></head>
 
 <body class="">
 
