--- a/index.html
+++ b/index.html
@@ -168,140 +168,140 @@
 			  </thead>
 			  <tbody>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Rollins, James</td>
 				  <td data-label="Titolo">La città sepolta</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Sanderson, Brandon</td>
 				  <td data-label="Titolo">La via dei re</td>
 				  <td data-label="Genere">Fantasy</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Dumas, Alexandre</td>
 				  <td data-label="Titolo">I tre moschettieri</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Bloch, Marc</td>
 				  <td data-label="Titolo">Apologia della storia</td>
 				  <td data-label="Genere">Saggistica</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">De Lillo, Don</td>
 				  <td data-label="Titolo">Americana</td>
 				  <td data-label="Genere">Narrativa</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Rollins, James</td>
 				  <td data-label="Titolo">La città sepolta</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Sanderson, Brandon</td>
 				  <td data-label="Titolo">La via dei re</td>
 				  <td data-label="Genere">Fantasy</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Dumas, Alexandre</td>
 				  <td data-label="Titolo">I tre moschettieri</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Bloch, Marc</td>
 				  <td data-label="Titolo">Apologia della storia</td>
 				  <td data-label="Genere">Saggistica</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">De Lillo, Don</td>
 				  <td data-label="Titolo">Americana</td>
 				  <td data-label="Genere">Narrativa</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Rollins, James</td>
 				  <td data-label="Titolo">La città sepolta</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Sanderson, Brandon</td>
 				  <td data-label="Titolo">La via dei re</td>
 				  <td data-label="Genere">Fantasy</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Dumas, Alexandre</td>
 				  <td data-label="Titolo">I tre moschettieri</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Bloch, Marc</td>
 				  <td data-label="Titolo">Apologia della storia</td>
 				  <td data-label="Genere">Saggistica</td>
-				  <td data-label="Data">10/11/2019</td>
+				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">De Lillo, Don</td>
 				  <td data-label="Titolo">Americana</td>
 				  <td data-label="Genere">Narrativa</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Rollins, James</td>
 				  <td data-label="Titolo">La città sepolta</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Sanderson, Brandon</td>
 				  <td data-label="Titolo">La via dei re</td>
 				  <td data-label="Genere">Fantasy</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Dumas, Alexandre</td>
 				  <td data-label="Titolo">I tre moschettieri</td>
 				  <td data-label="Genere">Avventura</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">Bloch, Marc</td>
 				  <td data-label="Titolo">Apologia della storia</td>
 				  <td data-label="Genere">Saggistica</td>
 				  <td data-label="Data">10/11/2018</td>
 				</tr>
 				<tr>
-				  <td data-label="Cover">Img</td>
+				  <td data-label="Cover"><img src="./assets/images/placeholder.png" width="20px"></td>
 				  <td data-label="Autore">De Lillo, Don</td>
 				  <td data-label="Titolo">Americana</td>
 				  <td data-label="Genere">Narrativa</td>
