--- a/preferiti.html
+++ b/preferiti.html
@@ -51,7 +51,7 @@
 	<!-- Tabella dei risultati -->
 	<div class="col-md-12">
 	<h2>I tuoi preferiti</h2>
-	
+		<p><a href="javascript:void(0)">Ciao<i class="fas fa-times"></i></a></p>
 	</div>
 	</div>
 	</div>
